--- a/documentation/Domain-Name-&-License/JD-Cloud-DNS/TOC.yml
+++ b/documentation/Domain-Name-&-License/JD-Cloud-DNS/TOC.yml
@@ -66,7 +66,9 @@
     - name: Reverse Resolution
       href: FAQ/Reverse.md    
     - name: TTL Introduction
-      href: FAQ/TTL.md         
+      href: FAQ/TTL.md
+    - name: DNS FLag day Description
+      href: Solutions-to-DNS-FLag-day.md
   - name: Related Resources
     items:
     - name: Document History
